--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
 	</repositories>
 
 	<properties>
-		<storm.version>0.8.2</storm.version>
-		<hbase.version>0.94.2-cdh4.2.1</hbase.version>
-		<hadoop.version>2.0.0-cdh4.2.1</hadoop.version>
+		<storm.version>0.9.0-wip21</storm.version>
+		<hbase.version>0.94.6-cdh4.3.0</hbase.version>
+		<hadoop.version>2.0.0-cdh4.3.0</hadoop.version>
 	</properties>
 
 	<dependencies>
@@ -47,6 +47,7 @@
 			<groupId>storm</groupId>
 			<artifactId>storm</artifactId>
 			<version>${storm.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
@@ -67,11 +68,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
-		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
