--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	</repositories>
 
 	<properties>
-		<storm.version>0.9.0-wip21</storm.version>
+		<storm.version>0.9.0.1</storm.version>
 		<hbase.version>0.94.6-cdh4.4.0</hbase.version>
 		<hadoop.version>2.0.0-cdh4.4.0</hadoop.version>
 	</properties>
